fix possible errors